--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 TELEGRAM_BOT_TOKEN=8461505234:AAGRLw-13LLbH2D-8ZOBFp0xUNV0ugoU1bM
 TELEGRAM_CHAT_ID=1296135988
 GMAIL_USER=hasanmahboob059@gmail.com
-GMAIL_PASS=ABC
+GMAIL_PASS=hvqy daza zond ytlz
+# GOOGLE_GENERATIVE_AI_API_KEY=AIzaSyCes0q_tDawgG1VbKBDjKgWO7ZOew-zbZo
