--- a/package.json
+++ b/package.json
@@ -3,18 +3,24 @@
   "version": "1.0.0",
   "description": "",
   "main": "gmail.js",
+  "type": "commonjs",
   "scripts": {
+    "start": "node index.js",
+    "dev": "node --watch index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ai-sdk/google": "^2.0.14",
+    "ai": "^5.0.46",
     "axios": "^1.12.2",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.6",
-    "telegraf": "^4.16.3"
+    "telegraf": "^4.16.3",
+    "zod": "^4.1.9"
   }
 }
